<resources>
    <string name="app_name">Chat2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_tv">Login</string>
    <string name="register_tv">Register</string>
    <string name="welcome0">Welcome to Annex</string>
    <string name="repeatPass">Repeat password</string>
    <string name="reg_RegisterBtn">Register</string>
    <string name="reg_creatAcc">Create an account</string>
    <string name="annexDescription">AnnexLogo</string>
    <string name="reg_username">Username</string>
    <string name="login_title">Sign in</string>
    <string name="login_subtitle">Connect with your e-mail to start chatting!</string>
    <string name="prompt_login">Login</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_settings">Settings</string>
    <string name="prompt_DM">Direct messages</string>
    <string name="profileImg_description">profile image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_profile_fragment">My account</string>
    <string name="prompt_profile_fragment2">Here you can manage your profile!</string>
    <string name="prompt_profile_fragment3">Edit Account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_friends">Friends</string>
    <string name="prompt_settings">Settings</string>
    <string name="terms_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="friend_profile_image">friend_profile_image</string>
    <string name="message">Message</string>
    <string name="block">Block</string>
    <string name="remove">Remove</string>
    <string name="generalImageDesc">image</string>
    <string name="Connections">CONNECTIONS</string>
    <string name="mutualGroups">Mutual Groups</string>
    <string name="mutualFriends">Mutual Friends</string>
    <string name="addANote">Add a note</string>
    <string name="registration_success">Your account has been successfully created!</string>
    <string name="registration_failure">Something went wrong while registering your account. Try again</string>
    <string name="passwordToConfirm">Enter your password to confirm changes</string>
    <string name="enableCameraStoragePerm">Please enable camera and storage permission</string>
    <string name="enableStoragePerm">Please, enable storage permission</string>
    <string name="errorUploadPic">Something went wrong while uploading your picture</string>
    <string name="successUploadPic">Image updated...</string>
    <string name="successUpdateProfile">Your account has been successfully updated</string>
    <string name="sendMessage">Type a message</string>
    <string name="sendFriendRequest">SEND FRIEND REQUEST</string>
    <string name="usernamesInfo">Usernames are case sensitive</string>
    <string name="usernameHint">Username</string>
    <string name="SEND">SEND</string>
    <string name="noUserFound">No user found. Double check that the username is correct</string>
    <string name="friendRequestFailed">Something went wrong. Your friend request couldn\'t be delivered.</string>
    <string name="friendRequestSentSuccess">Sent friend request!</string>
    <string name="friendRequestToItself">Hmm. You don\'t need a friend request to be friend with yourself</string>
    <string name="emptyPassword">Password field cannot be empty</string>
    <string name="emptyEmail">Email field cannot be empty</string>
    <string name="suggestMovie">Suggest</string>
    <string name="suggestMovieHint">Suggest a movie</string>
    <string name="nav_movies">Movies</string>
    <string name="MoviesFragment">Movies</string>
    <string name="Year">Year</string>
    <string name="Runtime">Runtime</string>
    <string name="Released">Released</string>
    <string name="Genre">Genre</string>
    <string name="Country">Country</string>
    <string name="Awards">Awards</string>
    <string name="Language">Language</string>
    <string name="wrongMovieTitle">Couldn\'t find the movie. Check the title.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_incomingPendings">Incoming Pendings</string>
    <string name="incomingPend">Here you can accept or deny  your friend requests</string>
    <string name="acceptFriendRequest">Accept the friend request?</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="nav_incoming">Incoming Friend Requests</string>
    <string name="ChangeTextColor">Change text colour for movie details.</string>
    <string name="White">White</string>
    <string name="RaportMessages">Your first 10 messages</string>
    <string name="createReport">Create report</string>
    <string name="CreateandSaveRep">Create and save report</string>
    <string name="MessReport">Messages Report</string>
    <string name="friendsReport">Friends Report</string>
    <string name="RaportFriends">Your first 10 friends</string>
    <string name="nav_favourite_friends">Favourite Friends</string>
    <string name="movieSugested">Suggestion sent!</string>
</resources>
