<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    android:orientation="vertical"
    tools:context=".ManageFriendActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorVeryDarkGray1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/friend_profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/friend_profile_image"
            android:src="@mipmap/ic_launcher_round" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/friend_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorWhitePure"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_messageFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:drawableTop="@drawable/ic_message_white_24dp"
                android:text="@string/message"
                android:textAlignment="center"
                android:textColor="@color/colorWhitePure"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_blockFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:drawableTop="@drawable/ic_block_white_24dp"
                android:text="@string/block"
                android:textAlignment="center"
                android:textColor="@color/colorWhitePure"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_removeFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:drawableTop="@drawable/ic_remove_circle_outline_white_24dp"
                android:text="@string/remove"
                android:textAlignment="center"
                android:textColor="@color/colorWhitePure"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/Connections"
        android:textColor="@color/colorWhiteGray"
        android:textSize="22dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_mutualGroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:drawableRight="@drawable/ic_chevron_white_black_24dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="25dp"
        android:paddingBottom="15dp"
        android:text="@string/mutualGroups"
        android:textColor="@color/colorWhitePure"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_mutualFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:drawableRight="@drawable/ic_chevron_white_black_24dp"
        android:paddingHorizontal="15dp"
        android:paddingBottom="25dp"
        android:text="@string/mutualFriends"
        android:textColor="@color/colorWhitePure"
        android:textSize="22sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="25dp"
        android:text="@string/addANote"
        android:textColor="@color/colorWhitePure"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhitePure"
        android:hint="Tap to add a note"
        android:paddingHorizontal="10dp"
        android:textColor="@color/colorWhiteGray"
        android:textColorHint="@color/colorWhiteGray"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_suggestedMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@+id/tv_suggestMovie_manFriend"
            android:backgroundTint="@color/colorWhitePure"
            android:hint="@string/suggestMovieHint"
            android:textColor="@color/colorWhiteGray"
            android:textColorHint="@color/colorWhiteGray"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_suggestMovie_manFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorVeryDarkGray1"
            android:padding="4dp"
            android:text="@string/suggestMovie"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhitePure"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>