<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    android:orientation="vertical"
    tools:context=".AddFriendActivity"
    android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:text="@string/sendFriendRequest"
        android:textColor="@color/colorWhiteGray"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:text="@string/usernamesInfo"
        android:textColor="@color/veryLightGray"
        android:textSize="14sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/ET_addFriend_friendUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameHint"
            android:layout_centerVertical="true"
            android:textColorHint="@color/veryLightGray"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_toLeftOf="@+id/tv_sendFriendRequest"/>

        <TextView
            android:id="@+id/tv_sendFriendRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SEND"
            android:textColor="@color/colorWhitePure"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:background="@color/colorViolet1"
            android:padding="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="5dp"
            android:onClick="addFriend"/>

    </RelativeLayout>


</LinearLayout>