<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    android:orientation="vertical"
    tools:context=".MessagesReportFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/RaportFriends"
        android:textAlignment="center"
        android:textColor="@color/colorWhitePure"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCreateRepFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/createReport" />

        <Button
            android:id="@+id/btnCreateAndSaveRepFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:text="@string/CreateandSaveRep" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvFriendsRep"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:textColor="@color/colorWhitePure"
        android:textSize="20sp" />

</LinearLayout>